Move paths.get to path.of