@@ -26,7 +26,6 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.sql.Connection;
 import java.sql.ResultSet;
@@ -187,7 +186,7 @@ class MigratorTest {
   @Order(9)
   void testSkippedScript() throws Exception {
     testStatusContainsNoPendingMigrations();
-    File skipped = Paths.get(dir.getCanonicalPath(), "scripts", "20080827200215_skipped_migration.sql").toFile();
+    File skipped = Path.of(dir.getCanonicalPath(), "scripts", "20080827200215_skipped_migration.sql").toFile();
     assertTrue(skipped.createNewFile());
     try {
       String output = SystemStubs.tapSystemOut(() -> {
@@ -205,8 +204,8 @@ class MigratorTest {
   @Test
   @Order(10)
   void testMissingScript() throws Exception {
-    Path original = Paths.get(dir + File.separator + "scripts", "20080827200216_create_procs.sql");
-    Path renamed = Paths.get(dir + File.separator + "scripts", "20080827200216_create_procs._sql");
+    Path original = Path.of(dir + File.separator + "scripts", "20080827200216_create_procs.sql");
+    Path renamed = Path.of(dir + File.separator + "scripts", "20080827200216_create_procs._sql");
     assertEquals(renamed, Files.move(original, renamed, StandardCopyOption.REPLACE_EXISTING));
     try {
       String output = SystemStubs.tapSystemOut(() -> {
@@ -324,7 +323,7 @@ class MigratorTest {
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "init"));
     assertNotNull(basePath.list());
     assertEquals(4, basePath.list().length);
-    File scriptPath = Paths.get(basePath.getCanonicalPath(), "scripts").toFile();
+    File scriptPath = Path.of(basePath.getCanonicalPath(), "scripts").toFile();
     assertEquals(3, scriptPath.list().length);
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "new", "test new migration"));
     assertEquals(4, scriptPath.list().length);
@@ -336,11 +335,11 @@ class MigratorTest {
     String idPattern = "000";
     File basePath = TestUtil.getTempDir();
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "--idpattern=" + idPattern, "init"));
-    File changelog = Paths.get(basePath.getCanonicalPath(), "scripts", "001_create_changelog.sql").toFile();
+    File changelog = Path.of(basePath.getCanonicalPath(), "scripts", "001_create_changelog.sql").toFile();
     assertTrue(changelog.exists());
     Migrator.main(
         TestUtil.args("--path=" + basePath.getAbsolutePath(), "--idpattern=" + idPattern, "new", "new migration"));
-    File newMigration = Paths.get(basePath.getCanonicalPath(), "scripts", "003_new_migration.sql").toFile();
+    File newMigration = Path.of(basePath.getCanonicalPath(), "scripts", "003_new_migration.sql").toFile();
     assertTrue(newMigration.exists());
     assertTrue(TestUtil.deleteDirectory(basePath), "delete temp dir");
   }
@@ -352,7 +351,7 @@ class MigratorTest {
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "init"));
     assertNotNull(basePath.list());
     assertEquals(4, basePath.list().length);
-    File scriptPath = Paths.get(basePath.getCanonicalPath(), "scripts").toFile();
+    File scriptPath = Path.of(basePath.getCanonicalPath(), "scripts").toFile();
     assertEquals(3, scriptPath.list().length);
 
     File templatePath = File.createTempFile("customTemplate", "sql");
@@ -364,7 +363,7 @@ class MigratorTest {
     String[] scripts = scriptPath.list();
     Arrays.sort(scripts);
     assertEquals(4, scripts.length);
-    try (Scanner scanner = new Scanner(Paths.get(scriptPath.getCanonicalPath(), scripts[scripts.length - 2]))) {
+    try (Scanner scanner = new Scanner(Path.of(scriptPath.getCanonicalPath(), scripts[scripts.length - 2]))) {
       if (scanner.hasNextLine()) {
         assertEquals("// " + desc, scanner.nextLine());
       }
@@ -379,7 +378,7 @@ class MigratorTest {
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "init"));
     assertNotNull(basePath.list());
     assertEquals(4, basePath.list().length);
-    File scriptPath = Paths.get(basePath.getCanonicalPath(), "scripts").toFile();
+    File scriptPath = Path.of(basePath.getCanonicalPath(), "scripts").toFile();
     assertEquals(3, scriptPath.list().length);
 
     File templatePath = File.createTempFile("customTemplate", "sql");
@@ -397,7 +396,7 @@ class MigratorTest {
     Migrator.main(TestUtil.args("--path=" + basePath.getAbsolutePath(), "init"));
     assertNotNull(basePath.list());
     assertEquals(4, basePath.list().length);
-    File scriptPath = Paths.get(basePath.getCanonicalPath(), "scripts").toFile();
+    File scriptPath = Path.of(basePath.getCanonicalPath(), "scripts").toFile();
     assertEquals(3, scriptPath.list().length);
 
     String output = SystemStubs.tapSystemOut(() -> {
@@ -499,8 +498,8 @@ class MigratorTest {
     String output = SystemStubs
         .tapSystemOut(() -> Migrator.main(TestUtil.args("init", "--path=" + baseDir.getAbsolutePath())));
     assertFalse(output.contains("Migrations path must be a directory"), output);
-    assertTrue(Files.exists(Paths.get(baseDir.getCanonicalPath(), "README")), "README created");
-    assertTrue(Files.isDirectory(Paths.get(baseDir.getCanonicalPath(), "environments")),
+    assertTrue(Files.exists(Path.of(baseDir.getCanonicalPath(), "README")), "README created");
+    assertTrue(Files.isDirectory(Path.of(baseDir.getCanonicalPath(), "environments")),
         "environments directory created");
     assertTrue(TestUtil.deleteDirectory(baseDir), "delete temp dir");
   }
